20020506
 - (djm) Unbreak auth-passwd.c for PAM and SIA
 - (djm) Unbreak PAM auth for protocol 1. Report from Pekka Savola 
   <pekkas@netcore.fi>
 - (djm) Don't reinitialise PAM credentials before we have started PAM.
   Report from Pekka Savola <pekkas@netcore.fi>
   
20020506
 - (bal) Fixed auth-passwd.c to resolve PermitEmptyPassword issue
 
20020501
 - (djm) Import OpenBSD regression tests. Requires BSD make to run
 - (djm) Fix readpassphase compilation for systems which have it

20020429
 - (tim) [contrib/caldera/openssh.spec] update fixUP to reflect changes in
   sshd_config.
 - (tim) [contrib/cygwin/README] remove reference to regex.
   patch from Corinna Vinschen <vinschen@redhat.com>

20020426
 - (djm) Bug #137, #209: fix make problems for scard/Ssh.bin, do uudecode
   during distprep only
 - (djm) Disable PAM password expiry until a complete fix for bug #188 exists
 - (djm) Bug #180: Set ToS bits on IPv4-in-IPv6 mapped addresses. Based on 
   patch from openssh@misc.tecq.org

20020425
 - (stevesk) [defines.h] remove USE_TIMEVAL; unused
 - (stevesk) [acconfig.h auth-passwd.c configure.ac sshd.c] HP-UX 10.26
   support.  bug #184.  most from dcole@keysoftsys.com.

20020424
 - (djm) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2002/04/23 12:54:10
     [version.h]
     3.2.1
   - djm@cvs.openbsd.org 2002/04/23 22:16:29
     [sshd.c]
     Improve error message; ok markus@ stevesk@

20020423
 - (stevesk) [acconfig.h configure.ac session.c] LOGIN_NO_ENDOPT for HP-UX
 - (stevesk) [acconfig.h] NEED_IN_SYSTM_H unused
 - (markus) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2002/04/23 12:58:26
     [radix.c]
     send complete ticket; semerad@ss1000.ms.mff.cuni.cz
 - (djm) Trim ChangeLog to include only post-3.1 changes
 - (djm) Update RPM spec file versions
 - (djm) Redhat spec enables KrbV by default
 - (djm) Applied OpenSC smartcard updates from Markus & 
   Antti Tapaninen <aet@cc.hut.fi>
 - (djm) Define BROKEN_REALPATH for AIX, patch from 